# wasm-build-from-github-actions

./: Cargo.toml  LICENSE  README.md
.github/workflows/: deploy-cloudflare.yml
src/: lib.rs
web/: index.html  package-lock.json  package.json  vite.config.js
